--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0"
