--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
@@ -40,6 +41,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.63"
   },
   "devDependencies": {
