--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.92.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -31,14 +34,18 @@
     "lenis": "^1.3.4",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-sanity": "^9.12.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
+    "sanity": "^3.92.0",
     "sonner": "^2.0.5",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "vaul": "^1.1.2",
